--- a/edor/src/main/resources/application.yml
+++ b/edor/src/main/resources/application.yml
@@ -22,7 +22,7 @@ spring:
       test-on-return: false
     sentinel:
       transport:
-        dashboard: 82.156.133.176:8080 #远程sentinel控制
+        dashboard: localhost:9001 #远程sentinel控制
 
 
 #mybatis文件访问路径
