--- a/edor/src/main/resources/application.yml
+++ b/edor/src/main/resources/application.yml
@@ -21,6 +21,7 @@ spring:
       test-on-borrow: false
       test-on-return: false
     sentinel:
+      eager: true #取消控制台懒加载
       transport:
         dashboard: localhost:9001 #远程sentinel控制
 
