--- a/gateway/pom.xml
+++ b/gateway/pom.xml
@@ -33,6 +33,13 @@
 <!--            <artifactId>spring-boot-starter-security</artifactId>-->
 <!--        </dependency>-->
 
+        <!-- oauth2 依赖引入 -->
+<!--        <dependency>-->
+<!--            <groupId>org.springframework.boot</groupId>-->
+<!--            <artifactId>spring-boot-starter-oauth2-resource-server</artifactId>-->
+<!--        </dependency>-->
+
+
         <!-- web：允许项目启动在Tomcat -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
