--- a/edor/src/main/resources/application.yml
+++ b/edor/src/main/resources/application.yml
@@ -6,9 +6,9 @@ server:
 #数据库连接池配置
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/insurance_dev?useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Shanghai
+    url: jdbc:mysql://192.168.200.130:3306/insurance_dev?useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Shanghai
     username: root
-    password: root
+    password: 123456
     type: com.alibaba.druid.pool.DruidDataSource
     druid:
       initial-size: 10
@@ -23,7 +23,7 @@ spring:
     sentinel:
       eager: true #取消控制台懒加载
       transport:
-        dashboard: localhost:9001 #远程sentinel控制
+        dashboard: 192.168.200.130:9001 #远程sentinel控制
 
 
 #mybatis文件访问路径
