--- a/gateway/src/main/resources/application.yml
+++ b/gateway/src/main/resources/application.yml
@@ -6,9 +6,9 @@ server:
 #数据库连接池配置
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/insurance_dev?useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Shanghai
+    url: jdbc:mysql://192.168.200.130:3306/insurance_dev?useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Shanghai
     username: root
-    password: root
+    password: 123456
     type: com.alibaba.druid.pool.DruidDataSource
     druid:
       initial-size: 10
@@ -90,7 +90,7 @@ spring:
     sentinel:
       eager: true #取消控制台懒加载
       transport:
-        dashboard: localhost:9001 #远程sentinel控制
+        dashboard: 192.168.200.130:9001 #远程sentinel控制
       datasource:
         ds1:
           nacos:
@@ -99,26 +99,9 @@ spring:
             server-addr: http://82.156.133.176:8848
             data-id: gateway-sentinel
             group-id: SENTINEL_GROUP
-            data-type: json
-            rule-type: flow
-        ds2:
-          nacos:
-            username: nacos
-            password: nacos
-            server-addr: http://82.156.133.176:8848
-            data-id: edor-sentinel
-            group-id: SENTINEL_GROUP
-            data-type: json
-            rule-type: degrade
-        ds3:
-          nacos:
-            username: nacos
-            password: nacos
-            server-addr: http://82.156.133.176:8848
-            data-id: insurance-sentinel
-            group-id: SENTINEL_GROUP
-            data-type: json
-            rule-type: degrade
+            namespace: e21b104c-8e51-45ca-938e-0d64ea387baa
+            data-type: yaml
+            rule-type: flow #规则:flow流控规则，degrade降级规则，authority授权规则，system系统规则, param-flow热点key规则
 
 
 #mybatis文件访问路径
