--- a/insure/src/main/resources/application.yml
+++ b/insure/src/main/resources/application.yml
@@ -39,3 +39,11 @@ swagger2:
 logging:
   level:
     cn.com.insure: debug
+
+#rocketMq配置
+rocketmq:
+  consumer:
+    group: edor_group
+    # 一次拉取消息最大值，注意是拉取消息的最大值而非消费最大值
+    pull-batch-size: 10
+  name-server: 192.168.200.130:9876
