41、解决sentinel报错的问题

--- a/edor/pom.xml
+++ b/edor/pom.xml
@@ -37,6 +37,10 @@
             <groupId>com.alibaba.cloud</groupId>
             <artifactId>spring-cloud-starter-alibaba-sentinel</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.alibaba.csp</groupId>
+            <artifactId>sentinel-datasource-nacos</artifactId>
+        </dependency>
 
         <!--Open Feign依赖-->
         <dependency>
