--- a/insure/src/main/resources/application.yml
+++ b/insure/src/main/resources/application.yml
@@ -24,6 +24,17 @@ spring:
       eager: true #取消控制台懒加载
       transport:
         dashboard: 192.168.200.130:9001 #远程sentinel控制
+      datasource:
+        ds3:
+          nacos:
+            username: nacos
+            password: nacos
+            server-addr: http://82.156.133.176:8848
+            data-id: insurance-sentinel
+            group-id: SENTINEL_GROUP
+            namespace: e21b104c-8e51-45ca-938e-0d64ea387baa
+            data-type: json
+            rule-type: flow #规则:flow流控规则，degrade降级规则，authority授权规则，system系统规则, param-flow热点key规则
 
 
 
